# wxpic

./: .gitignore  DrawTool.cpp  DrawTool.h  IImageSource.h  ITool.h  ImagePanel.cpp  ImagePanel.h  ImageStack.cpp  ImageStack.h  MainWindow.cpp  MainWindow.h  MainWindowLayout.cpp  MainWindowLayout.h  SConstruct  ShapeTool.cpp  ShapeTool.h  UndoBuffer.cpp  UndoBuffer.h  Util.cpp  Util.h  layout.wxg  meson.build  readme.md  snap notes.txt  version.sh  wxCustomButton.cpp  wxCustomButton.h  wxpic.cpp
res/icons/: icons-licencse.txt
snap/: snapcraft.yaml
snap/gui/: source.txt  wxpic.desktop
src/: AboutDialog.cpp  AboutDialog.h  BlurTool.cpp  BlurTool.h  ColorPickerTool.cpp  ColorPickerTool.h  CropTool.cpp  CropTool.h  DrawTool.cpp  DrawTool.h  IImageListener.h  IStatusListener.h  ITool.h  IUndoListener.h  ImagePanel.cpp  ImagePanel.h  ImageStack.cpp  ImageStack.h  LoadedFile.cpp  LoadedFile.h  MainWindow.cpp  MainWindow.h  MainWindowLayout.cpp  MainWindowLayout.h  Settings.cpp  Settings.h  ShapeTool.cpp  ShapeTool.h  Types.cpp  Types.h  Util.cpp  Util.h  Version.cpp  Version.h  image_data.h  imagwebp.cpp  imagwebp.h  wxpic.cpp
util/: files-to-h.py
